# rassay

./: .gitignore  Cargo.toml  README.md  infer.rs
.github/workflows/: build.yaml
src/: data.rs  dataset.rs  dicegen.rs  duel.rs  inputs.rs  lib.rs  probabilities.rs  self_play.rs  training.rs
src/evaluator/: evaluator.rs  greedy.rs  hyper.rs  mod.rs  nnevaluator.rs  nply.rs  pubeval.rs  rollout.rs  subhyper.rs
src/mnist/: data.rs  mod.rs
src/model/: large.rs  mod.rs  rassay.rs  tdgammon.rs
src/training/: mod.rs  self_play.rs  supervised.rs  td_learning.rs  visual.rs
