[package]
name = "rassay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bkgm = { path = "../bkgm", version = "0.3.1" }
rayon = "1.8.0"
csv = "1.2.2"
fastrand = "2.0.0"
clap = { version = "4.4.6", features = ["derive"] }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
burn = { version = "0.16.0", features = ["tch", "autodiff"] }
indicatif = { version = "0.17.7", features = ["rayon"] }
